@@ -1,0 +1,7 @@
+{
+  "id": "cust_6vRXClWqnLhV14",
+  "email": "test@razorpay.com",
+  "contact": "9876543210",
+  "notes": [],
+  "created_at": 1482299274
+}
